* https://github.com/docToolchain/docToolchain/pull/711[#712 - publishToConfluence fails when no hash is available for an uploaded image]

=== added

2021-11-30::
* https://github.com/docToolchain/docToolchain/pull/706[#706 - exportEA: Add check if diagrams shall be overwritten]

2021-11-13::
* https://github.com/docToolchain/docToolchain/pull/686[#686 - Add resourceDirs option]

=== changed

2021-11-14::
* refactored jbake template "menu.gsp"

=== fixed

2021-11-15::
* https://github.com/docToolchain/docToolchain/pull/696[#696 - exportContributors - not everybody is rendered]
* https://github.com/docToolchain/docToolchain/pull/697[#697 - exportToMarkdown docs are not referenced correctly]

== 2.0.3 - 2021-11-11

=== added

* https://github.com/docToolchain/docToolchain/issues/681[#681 - Please reactivate single page manual on v2.0.x site]

=== fixed

2021-11-10::
* fix https://github.com/docToolchain/docToolchain/issues/693[#693 - on windows powershell, targetDir is set wrong]
* fix https://github.com/docToolchain/docToolchain/issues/695[#695 - generateSite: toc attributes]
2021-11-09::
* fix https://github.com/docToolchain/docToolchain/issues/690[#690 - previewSite: exception if folder does not exist]
2021-11-08::
* fix https://github.com/docToolchain/docToolchain/issues/687[#687 - wrong encoding of emojis]
* fix https://github.com/docToolchain/docToolchain/issues/688[#688 - htmlSanityCheck: config of sourceDir is wrong]
* fix https://github.com/docToolchain/docToolchain/issues/689[#689 - code highlight: css clash with blog post tags]
* fix https://github.com/docToolchain/docToolchain/issues/682[#682 - generateSite: copyImages uses the wrong target]


== 2.0.2 - 2021-10-19

=== added

2021-10-19::
* use :jbake-rightcolumnhtml: to add some html to the right column

=== changed

2021-10-19::
* Add https://github.com/docToolchain/docToolchain/issues/667[#667 - GH Actions Default Build]

2021-10-18::