@@ -46,10 +46,6 @@ microsite.with {
 
     // is your microsite deployed with a context path?
     contextPath = '/'
-    // used as title in the template
-    title='Microsite'
-    // used in the template for absolute uris
-    host='https://localhost'
     // configure a port on which your preview server will run
     previewPort = 8881
     // the folder of a site definition (theme) relative to the docDir+inputPath
@@ -101,7 +97,8 @@ microsite.with {
     // the location of the landing page
     landingPage = 'landingpage.gsp'
     // the menu of the microsite. A map of [code:'title'] entries to specify the order and title of the entries.
-    // the codes are autogenerated from the forlder names or :jbake-menu: attribute entries from the .adoc file headers
+    // the codes are autogenerated from the folder names or :jbake-menu: attribute entries from the .adoc file headers
+    // set a title to '-' in order to remove this menu entry.
     menu = [:]
 
 }
